--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
 jdk:
   - openjdk17
 before_install:
-  - if [ -f ./scripts/prepareJitpackEnvironment.sh ]; then ./scripts/prepareJitpackEnvironment.sh; fi
+  - sdk install java 17.0.7-open
+  - sdk use java 17.0.7-open
